cmake_minimum_required(VERSION 3.26)
project(programming_techniques)

set(CMAKE_CXX_STANDARD 17)

add_executable(programming_techniques
        Bai28.cpp
        Bai29.cpp
        Bai29.cpp
        Bai30.cpp)
add_executable(
)
add_executable(Bai2 Bai2.cpp)
add_executable(Bai3 Bai3.cpp)
add_executable(Bai16 Bai16.cpp)
add_executable(Bai26 Bai26.cpp)

